# sacd-ripper

./: README.TXT  readme.txt  todo
libs/libanergistic/: channel.c  emulate-instrs.c  emulate-instrs.h  emulate.c  emulate.h  helper.c  helper.h  instrs
libs/libsacd/: dsdiff.c  scarletbook.h  scarletbook.h.bak  scarletbook_read.c  scarletbook_read.c.bak
tools/sacd_extract/: CMakeLists.txt  build sacd_extract with MSYS64 MingGW toolchain.cmd  changelog  main.c  sacd_extract.sln
